z-index fixes

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,6 +11,7 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   background-color: #a8c4e6;
+  position: relative;
 }
 
 .App-header {
@@ -23,7 +24,6 @@ body {
   font-size: calc(10px + 1vmin);
   color: #48525D;
   margin-bottom: 65vh;
-
 }
 
 ul {
@@ -62,7 +62,7 @@ nav {
 
 nav li{
   
-  padding-top: 16vh;
+  padding-top: 18vh;
   list-style: none;
   text-align: center;
   justify-content: center;
